flux/apps/bookstack/bookstack/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bookstack
  namespace: bookstack
  labels:
    app: bookstack
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: bookstack
  serviceName: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
        - name: bookstack
          image: docker.io/solidnerd/bookstack:26.9.1 # {"$imagepolicy": "flux-system:bookstack-policy"}
          ports:
            - containerPort: 6875
              protocol: TCP
          volumeMounts:
            - name: bookstack-config
              mountPath: /config
              readOnly: False
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: 4Gi
              cpu: 500m
      restartPolicy: Always
      readinessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 30
        periodSeconds: 30
        timeoutSeconds: 5
        failureThreshold: 5
      livenessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 15
        periodSeconds: 10
        timeoutSeconds: 5
        failureThreshold: 3
      volumes:
        - name: bookstack-config
          persistentVolumeClaim:
            claimName: bookstack-config
