flux/apps/bookstack/bookstack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookstack
  namespace: bookstack
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-gateway
  hostnames:
  - "wiki.${GLOBAL_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: bookstack
      port: 6875
